--- a/package.json
+++ b/package.json
@@ -4,34 +4,44 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
+    "dev": "tsx watch src/index.ts",
     "build": "tsc",
     "start": "node dist/server.js",
-    "test_watch": "jest --watchAll",
-    "test": "jest"
+    "test": "dotenv -e .env.test -- npx prisma generate && dotenv -e .env.test -- npx prisma db push --force-reset && jest",
+    "test_watch": "dotenv -e .env.test -- npx prisma generate && dotenv -e .env.test -- npx prisma db push --force-reset && jest --watchAll"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@prisma/adapter-better-sqlite3": "^7.0.0",
     "@prisma/client": "^7.0.0",
+    "chance": "^1.1.13",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
     "dotenv": "^17.2.3",
+    "eventemitter2": "^6.4.9",
     "express": "^5.1.0",
     "lodash": "^4.17.21",
     "uuid": "^8.3.2",
     "zod": "^4.1.12"
   },
   "devDependencies": {
+    "@types/chance": "^1.1.7",
     "@types/express": "^5.0.5",
     "@types/jest": "^30.0.0",
     "@types/lodash": "^4.17.20",
     "@types/node": "^24.10.1",
     "@types/uuid": "^10.0.0",
+    "cross-env": "^10.1.0",
+    "dotenv-cli": "^11.0.0",
     "jest": "^30.2.0",
     "prisma": "^7.0.0",
+    "reflect-metadata": "^0.2.2",
     "ts-jest": "^29.4.5",
     "ts-node-dev": "^2.0.0",
+    "tsx": "^4.20.6",
     "typescript": "^5.9.3"
   }
 }
