--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "cross-env": "^10.1.0",
     "dotenv-cli": "^11.0.0",
     "jest": "^30.2.0",
+    "node-mocks-http": "^1.17.2",
     "prisma": "^7.0.0",
     "reflect-metadata": "^0.2.2",
     "ts-jest": "^29.4.5",
