--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc",
     "start": "node dist/shared/server/index.js",
     "test": "dotenv -e .env.test -- npx prisma generate && dotenv -e .env.test -- npx prisma db push --force-reset && jest",
-    "test_watch": "dotenv -e .env.test -- npx prisma generate && dotenv -e .env.test -- npx prisma db push --force-reset && jest --watchAll"
+    "test:watch": "dotenv -e .env.test -- npx prisma generate && dotenv -e .env.test -- npx prisma db push --force-reset && jest --watchAll"
   },
   "keywords": [],
   "author": "",
